src/test/ui/span/gated-features-attr-spans.stderr
error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/gated-features-attr-spans.rs:1:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = note: for more information, see tracking issue #27731
   = help: add #![feature(repr_simd)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
